Fixed z-index for match logo

--- a/src/App.css
+++ b/src/App.css
@@ -457,7 +457,8 @@
 	max-width: 100%;
 	z-index: 6;
 	max-height: 7%;
-	margin-top: 3%
+	margin-top: 3%;
+	position: relative;
 }
 
 .matchLogo{
